samples/_failures_safe/1761282082_a59ad2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39fa3e82.c: In function ‘main’:
./samples/SAFE/__tmp_39fa3e82.c:145:22: error: ‘comp’ undeclared (first use in this function)
  145 |         buffer_free(&comp
      |                      ^~~~
./samples/SAFE/__tmp_39fa3e82.c:145:22: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_39fa3e82.c:145:26: error: expected ‘)’ at end of input
  145 |         buffer_free(&comp
      |                    ~     ^
      |                          )
./samples/SAFE/__tmp_39fa3e82.c:145:9: error: expected declaration or statement at end of input
  145 |         buffer_free(&comp
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_39fa3e82.c:145:9: error: expected declaration or statement at end of input
